--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "algoliasearch": "^3.24.0",
+    "moment": "^2.18.1",
     "vue": "^2.3.3"
   },
   "devDependencies": {
